--- a/index.html
+++ b/index.html
@@ -11,5 +11,31 @@
 
 		<title>Frontend Mentor | Product preview card component</title>
 	</head>
-	<body></body>
+	<body>
+		<main>
+			<article class="card-container">
+				<figure class="card-header">
+					<img
+						src="./images/image-product-mobile.jpg"
+						alt=" Gabrielle Essence Eau De Parfum"
+						width="686"
+						height="480"
+					/>
+				</figure>
+				<div class="card-body">
+					<span class="product-category">Perfume</span>
+					<h1 class="product-name">Gabrielle Essence Eau De Parfum</h1>
+					<p class="product-description">
+						A floral, solar and voluptuous interpretation composed by Olivier Polge,
+						Perfumer-Creator for the House of CHANEL.
+					</p>
+					<div class="product prices">
+						<strong>$149.99</strong>
+						<small>$169.99</small>
+					</div>
+					<button class="btn">Add to Cart</button>
+				</div>
+			</article>
+		</main>
+	</body>
 </html>
